--- a/src/test/resources/org/echocat/locela/api/java/format/expectedFormatResults.choice.properties
+++ b/src/test/resources/org/echocat/locela/api/java/format/expectedFormatResults.choice.properties
@@ -41,7 +41,7 @@ There\ {two,choice,0#is\ no\ file''''|1#is\ one\ file''''|1<are\ {two,number}\ f
 There\ {zero,choice,0#is\ no\ file|''1#is\ one\ file|1''<are\ {zero,number}\ files}. = There is no file.
 There\ {one,choice,0#is\ no\ file|''1#is\ one\ file|1''<are\ {one,number}\ files}. = There .
 There\ {two,choice,0#is\ no\ file|''1#is\ one\ file|1''<are\ {two,number}\ files}. = There .
-There\ {contidionString,choice,0#is\ no\ file|''1#is\ one\ file|1''#are\ strange\ things}. = There are strange things.
+There\ {conditionString,choice,0#is\ no\ file|''1#is\ one\ file|1''#are\ strange\ things}. = There are strange things.
 
 # == Escaping from escaping in pattern ==
 There\ {zero,choice,0#is\ no\ file|''''1#is\ one\ file|1''''<are\ {zero,number}\ files}. = There is no file.
