Added LocaleAwareMessages and run mvn clean verify instead of mvn clean test

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ jdk:
   - oraclejdk7
   - oraclejdk8
 script:
-  - mvn -Dsurefire.useFile=false clean test
+  - mvn -Dsurefire.useFile=false clean verify
