--- a/pom.xml
+++ b/pom.xml
@@ -179,7 +179,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.9</version>
                     <configuration>
-                        <forkMode>always</forkMode>
+                        <forkMode>once</forkMode>
                         <useFile>false</useFile>
                         <!--suppress MavenModelInspection -->
                         <argLine>-Duser.timezone="Europe/Berlin" ${argLine}</argLine>
