--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <name>echocat Locela - API for Java</name>
     <groupId>org.echocat.locela.api</groupId>
     <artifactId>java</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <url>https://locela.echocat.org</url>
     <description>Java API of a localization framework for an easy and platform independent work.</description>
 
@@ -50,53 +50,40 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.basePackages>${project.groupId}.${project.artifactId}</project.build.basePackages>
 
-        <versions.org.echocat.jomon>1.4.3</versions.org.echocat.jomon>
-        <versions.org.slf4j>1.7.5</versions.org.slf4j>
+        <versions.org.slf4j>1.7.21</versions.org.slf4j>
     </properties>
-
-    <dependencyManagement>
-        <dependencies>
-            <!-- Common -->
-            <dependency>
-                <groupId>org.echocat.jomon</groupId>
-                <artifactId>runtime</artifactId>
-                <version>${versions.org.echocat.jomon}</version>
-            </dependency>
-
-            <!-- Caching -->
-            <dependency>
-                <groupId>org.echocat.jomon</groupId>
-                <artifactId>cache</artifactId>
-                <version>${versions.org.echocat.jomon}</version>
-            </dependency>
-
-            <!-- Testing -->
-            <dependency>
-                <groupId>org.echocat.jomon</groupId>
-                <artifactId>testing</artifactId>
-                <version>${versions.org.echocat.jomon}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <dependencies>
         <!-- Common -->
         <dependency>
-            <groupId>org.echocat.jomon</groupId>
-            <artifactId>runtime</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>1.3.9</version>
         </dependency>
-
-        <!-- Caching -->
         <dependency>
-            <groupId>org.echocat.jomon</groupId>
-            <artifactId>cache</artifactId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${versions.org.slf4j}</version>
             <scope>provided</scope>
         </dependency>
 
         <!-- Testing -->
         <dependency>
-            <groupId>org.echocat.jomon</groupId>
-            <artifactId>testing</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${versions.org.slf4j}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
