--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <name>echocat Locela - API for Java</name>
     <groupId>org.echocat.locela.api</groupId>
     <artifactId>java</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <url>https://locela.echocat.org</url>
     <description>Java API of a localization framework for an easy and platform independent work.</description>
 
@@ -94,12 +94,12 @@
                 <plugin>
                     <groupId>org.jacoco</groupId>
                     <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.7.2.201409121644</version>
+                    <version>0.7.6.201602180812</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>1.4</version>
+                    <version>1.6</version>
                     <configuration>
                         <keyname>echocat</keyname>
                     </configuration>
@@ -108,12 +108,12 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <!--suppress MavenModelInspection -->
-                    <version>2.5</version>
+                    <version>2.10.3</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.2</version>
+                    <version>3.0.0</version>
                     <configuration>
                         <archive>
                             <manifest>
@@ -126,12 +126,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>2.1.2</version>
+                    <version>3.0.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>2.0.2</version>
+                    <version>3.5.1</version>
                     <configuration>
                         <source>1.7</source>
                         <target>1.7</target>
@@ -140,7 +140,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-deploy-plugin</artifactId>
-                    <version>2.7</version>
+                    <version>2.8.2</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.apache.maven.wagon</groupId>
@@ -152,7 +152,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>2.5.3</version>
                     <configuration>
                         <tagNameFormat>version-@{project.version}</tagNameFormat>
                         <!--suppress MavenModelInspection -->
@@ -164,7 +164,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.9</version>
+                    <version>2.19.1</version>
                     <configuration>
                         <forkMode>once</forkMode>
                         <useFile>false</useFile>
@@ -308,7 +308,7 @@
         <connection>scm:git://github.com/echocat/locela-api-java.git</connection>
         <developerConnection>scm:git:git@github.com:echocat/locela-api-java.git</developerConnection>
         <url>https://github.com/echocat/locela-api-java</url>
-        <tag>HEAD</tag>
+        <tag>version-1.1.0</tag>
     </scm>
 
 </project>
