--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <name>echocat Locela - API for Java</name>
     <groupId>org.echocat.locela.api</groupId>
     <artifactId>java</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <url>https://locela.echocat.org</url>
     <description>Java API of a localization framework for an easy and platform independent work.</description>
 
