* Fixed LocaleNormalizer * Added MessagesSource (MessageProviderBasedMessageSource) for Spring integrations * Added LocaleHierachyAwaresFactory for easier access of required instances (for example within Spring)

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Spring -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.2.6.RELEASE</version>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
