--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ name: Publish package to GitHub Packages
 on:
   release:
     types: [created]
+  pull_request:
 
 jobs:
   publish:
@@ -15,6 +16,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Import GPG key
+        id: import_gpg
+        uses: crazy-max/ghaction-import-gpg@v5
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          PASSPHRASE: ${{ secrets.PASSPHRASE }}
+
+      - name: List GPG keys
+        run: gpg -K
+
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
@@ -26,6 +37,6 @@ jobs:
         run: mvn --batch-mode versions:set "-DnewVersion=${{ github.event.release.tag_name }}"
 
       - name: Maven Deploy
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode -Psign "-Dgpg.passphrase=${{ secrets.PASSPHRASE }}" deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
