--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,9 +34,9 @@ jobs:
           cache: maven
 
       - name: Adjust version
-        run: mvn --batch-mode versions:set "-DnewVersion=${{ github.event.release.tag_name }}"
+        run: mvn --no-transfer-progress --batch-mode versions:set "-DnewVersion=${{ github.event.release.tag_name }}"
 
       - name: Maven Deploy
-        run: mvn --batch-mode -Psign "-Dgpg.passphrase=${{ secrets.PASSPHRASE }}" deploy
+        run: mvn --no-transfer-progress --batch-mode -Psign "-Dgpg.passphrase=${{ secrets.PASSPHRASE }}" deploy
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
