--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Publish package to GitHub Packages
+name: Release
 
 on:
   release:
@@ -33,8 +33,8 @@ jobs:
           distribution: 'adopt'
           cache: maven
 
-      - name: Adjust version
-        run: mvn --no-transfer-progress --batch-mode versions:set "-DnewVersion=${{ github.event.release.tag_name }}"
+#      - name: Adjust version
+#        run: mvn --no-transfer-progress --batch-mode versions:set "-DnewVersion=${{ github.event.release.tag_name }}"
 
       - name: Maven Deploy
         run: mvn --no-transfer-progress --batch-mode -Psign "-Dgpg.passphrase=${{ secrets.PASSPHRASE }}" clean deploy
