--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,12 +3,12 @@ name: Release
 on:
   release:
     types: [created]
-  pull_request:
 
 jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
+    environment: Release
     permissions:
       contents: read
       packages: write
@@ -34,8 +34,7 @@ jobs:
           cache: maven
 
       - name: Adjust version
-#        run: mvn --no-transfer-progress --batch-mode versions:set "-DnewVersion=${{ github.event.release.tag_name }}"
-        run: mvn --no-transfer-progress --batch-mode versions:set "-DnewVersion=2.0.0"
+        run: mvn --no-transfer-progress --batch-mode versions:set "-DnewVersion=${{ github.event.release.tag_name }}"
 
       - name: Maven Deploy
         run: mvn --no-transfer-progress --batch-mode -Psign "-Dgpg.passphrase=${{ secrets.PASSPHRASE }}" -DskipTests=true clean deploy
@@ -47,4 +46,3 @@ jobs:
         env:
           MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           MAVEN_CENTRAL_PASSWORD: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-
